# Projet_SPOTIFY

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
data/duckdb_data/: exploration.ipynb
notebooks/: analyse_data.ipynb  exploration_data.ipynb  mongo_to_panda.py
spotify_recommandation/mongo_db/: db_create.py  docker-compose.yaml
spotify_recommandation/spotify_API_requests/: requirements.txt
spotify_recommandation/spotify_API_requests/app/: main.py
